syntax = "proto3";

package nftmeta.v1.token;

option go_package = "github.com/web3eye-io/cyber-tracer/pkg/proto/token";
import "cybertracer/cybertracerv1.proto";

service Manager {
  rpc CreateToken(CreateTokenRequest) returns (CreateTokenResponse) {}
  rpc CreateTokens(CreateTokensRequest) returns (CreateTokensResponse) {}
  rpc UpdateToken(UpdateTokenRequest) returns (UpdateTokenResponse) {}
  rpc GetToken(GetTokenRequest) returns (GetTokenResponse) {}
  rpc GetTokenOnly(GetTokenOnlyRequest) returns (GetTokenOnlyResponse) {}
  rpc GetTokens(GetTokensRequest) returns (GetTokensResponse) {}
  rpc ExistToken(ExistTokenRequest) returns (ExistTokenResponse) {}
  rpc ExistTokenConds(ExistTokenCondsRequest)
      returns (ExistTokenCondsResponse) {}
  rpc CountTokens(CountTokensRequest) returns (CountTokensResponse) {}
  rpc DeleteToken(DeleteTokenRequest) returns (DeleteTokenResponse) {}
}

// for show the state that resource_addr is converted to vector
enum ConvertState {
  Default = 0;
  Waiting = 10;
  Processing = 20;
  Pause = 30;
  Success = 40;
  Failed = 50;
}

message TokenReq {
  optional string ID = 10;
  optional string ChainType = 20;
  optional int32 ChainID = 30;
  optional string Contract = 40;
  optional string TokenType = 50;
  optional string TokenID = 60;
  optional string Owner = 70;
  optional string URI = 80;
  optional string URIType = 90;
  optional string ImageURL = 100;
  optional string VideoURL = 110;
  optional string Name = 120;
  optional string Description = 130;
  optional ConvertState VectorState = 140;
  optional int64 VectorID = 150;
  optional string Remark = 160;
}

message Token {
  string ID = 10;
  string ChainType = 20;
  int32 ChainID = 30;
  string Contract = 40;
  string TokenType = 50;
  string TokenID = 60;
  string Owner = 70;
  string URI = 80;
  string URIType = 90;
  string ImageURL = 100;
  string VideoURL = 110;
  string Description = 120;
  string Name = 130;
  ConvertState VectorState = 140;
  int64 VectorID = 150;
  string Remark = 160;
}

message Conds {
  cybertracer.v1.StringVal ID = 10;
  cybertracer.v1.StringVal ChainType = 20;
  cybertracer.v1.Int32Val ChainID = 30;
  cybertracer.v1.StringVal Contract = 40;
  cybertracer.v1.StringVal TokenType = 50;
  cybertracer.v1.StringVal TokenID = 60;
  cybertracer.v1.StringVal Owner = 70;
  cybertracer.v1.StringVal URI = 80;
  cybertracer.v1.StringVal URIType = 90;
  cybertracer.v1.StringVal ImageURL = 100;
  cybertracer.v1.StringVal VideoURL = 110;
  cybertracer.v1.StringVal Description = 120;
  cybertracer.v1.StringVal Name = 130;
  cybertracer.v1.StringVal VectorState = 140;
  cybertracer.v1.Int64Val VectorID = 150;
  cybertracer.v1.StringVal Remark = 160;
  cybertracer.v1.StringSliceVal IDs = 170;
  cybertracer.v1.Int64SliceVal VectorIDs = 180;
}

message CreateTokenRequest { TokenReq Info = 10; }

message CreateTokenResponse { Token Info = 10; }

message CreateTokensRequest { repeated TokenReq Infos = 10; }

message CreateTokensResponse { repeated Token Infos = 10; }

message GetTokenRequest { string ID = 10; }

message GetTokenResponse { Token Info = 10; }

message GetTokensRequest {
  Conds Conds = 10;
  int32 Offset = 20;
  int32 Limit = 30;
}

message GetTokensResponse {
  repeated Token Infos = 10;
  uint32 Total = 20;
}

message GetTokenOnlyRequest { Conds Conds = 10; }

message GetTokenOnlyResponse { Token Info = 10; }

message UpdateTokenRequest { TokenReq Info = 10; }

message UpdateTokenResponse { Token Info = 10; }

message ExistTokenRequest { string ID = 10; }

message ExistTokenResponse { bool Info = 10; }

message ExistTokenCondsRequest { Conds Conds = 10; }

message ExistTokenCondsResponse { bool Info = 10; }

message CountTokensRequest { Conds Conds = 10; }

message CountTokensResponse { uint32 Info = 10; }

message DeleteTokenRequest { string ID = 10; }

message DeleteTokenResponse { Token Info = 10; }
