syntax = "proto3";

package nftmeta.v1.synctask;

option go_package = "github.com/web3eye-io/Web3Eye/proto/web3eye/nftmeta/v1/synctask";
import "web3eye/web3eye.proto";
import "web3eye/nftmeta/v1/cttype/cttype.proto";

service Manager {
  rpc CreateSyncTask(CreateSyncTaskRequest) returns (CreateSyncTaskResponse) {}
  rpc TriggerSyncTask(TriggerSyncTaskRequest) returns (GetSyncTaskResponse) {}
  rpc UpdateSyncTask(UpdateSyncTaskRequest) returns (UpdateSyncTaskResponse) {}
  rpc GetSyncTask(GetSyncTaskRequest) returns (GetSyncTaskResponse) {}
  rpc GetSyncTaskOnly(GetSyncTaskOnlyRequest)
      returns (GetSyncTaskOnlyResponse) {}
  rpc GetSyncTasks(GetSyncTasksRequest) returns (GetSyncTasksResponse) {}
  rpc ExistSyncTask(ExistSyncTaskRequest) returns (ExistSyncTaskResponse) {}
  rpc ExistSyncTaskConds(ExistSyncTaskCondsRequest)
      returns (ExistSyncTaskCondsResponse) {}
  rpc CountSyncTasks(CountSyncTasksRequest) returns (CountSyncTasksResponse) {}
  rpc DeleteSyncTask(DeleteSyncTaskRequest) returns (DeleteSyncTaskResponse) {}
}

message SyncTaskReq {
  optional string ID = 10;
  optional cttype.ChainType ChainType = 20;
  optional int32 ChainID = 30;
  optional uint64 Start = 40;
  optional uint64 End = 50;
  optional uint64 Current = 60;
  optional string Topic = 70;
  optional string Description = 80;
  optional cttype.SyncState SyncState = 90;
  optional string Remark = 100;
}

message SyncTask {
  string ID = 10;
  cttype.ChainType ChainType = 20;
  int32 ChainID = 30;
  uint64 Start = 40;
  uint64 End = 50;
  uint64 Current = 60;
  string Topic = 70;
  string Description = 80;
  cttype.SyncState SyncState = 90;
  string Remark = 100;
}

message Conds {
  web3eye.StringVal ID = 10;
  web3eye.StringVal ChainType = 20;
  web3eye.Int32Val ChainID = 30;
  web3eye.Uint64Val Start = 40;
  web3eye.Uint64Val End = 50;
  web3eye.Uint64Val Current = 60;
  web3eye.StringVal Topic = 70;
  web3eye.StringVal Description = 80;
  web3eye.StringVal SyncState = 90;
  web3eye.StringVal Remark = 100;
  web3eye.StringSliceVal IDs = 110;
}

message CreateSyncTaskRequest { SyncTaskReq Info = 10; }

message CreateSyncTaskResponse { SyncTask Info = 10; }

message TriggerSyncTaskRequest { string Topic = 10; }
message GetSyncTaskRequest { string ID = 10; }

message GetSyncTaskResponse { SyncTask Info = 10; }

message GetSyncTasksRequest {
  Conds Conds = 10;
  int32 Offset = 20;
  int32 Limit = 30;
}

message GetSyncTasksResponse {
  repeated SyncTask Infos = 10;
  uint32 Total = 20;
}

message GetSyncTaskOnlyRequest { Conds Conds = 10; }

message GetSyncTaskOnlyResponse { SyncTask Info = 10; }

message UpdateSyncTaskRequest { SyncTaskReq Info = 10; }

message UpdateSyncTaskResponse { SyncTask Info = 10; }

message ExistSyncTaskRequest { string ID = 10; }

message ExistSyncTaskResponse { bool Info = 10; }

message ExistSyncTaskCondsRequest { Conds Conds = 10; }

message ExistSyncTaskCondsResponse { bool Info = 10; }

message CountSyncTasksRequest { Conds Conds = 10; }

message CountSyncTasksResponse { uint32 Info = 10; }

message DeleteSyncTaskRequest { string ID = 10; }

message DeleteSyncTaskResponse { SyncTask Info = 10; }
